# database-mcp-python

./: .gitignore  README.md  database-config.example.yaml  database-config.yaml  pyproject.toml
docs/: README_en.md  README_zh.md
src/factory/: database_factory.py
src/model/: database_config.py
src/strategy/: __init__.py  database_strategy.py  oracle_strategy.py  postgresql_strategy.py  sqlite_strategy.py
src/tools/: common_tools.py  mysql_tools.py  oracle_tools.py  postgresql_tools.py  sqlite_tools.py
test/: test_datasource.py
