[project]
name = "database-mcp-server"
version = "1.0.4"
description = "Database MCP Server for SQL operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbutils>=3.1.2",
    "fastmcp>=3.1.1",
    "mcp[cli]>=1.26.0",
    "pymysql>=1.1.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "psycopg2>=2.9.11",
    "oracledb>=3.4.2",
]

[project.scripts]
database-mcp-server = "src:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
